software-center (3.1.20) UNRELEASED; urgency=low

  [ Kiwinote ]
  * softwarecenter/view/appdetailsview_gtk.py:
    - make description accessible
  * softwarecenter/view/catview_gtk.py:
    - rewrite recommended widget to make it suitable for i18n and a11y
  * softwarecenter/view/widgets/carousel.py:
    - don't transition when a Page has focus
  * softwarecenter/view/widgets/mkit.py:
    - some fixes to correctly update color/cursor of Button upon mouse actions

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 18 Feb 2011 11:53:19 +0100

software-center (3.1.19) natty; urgency=low

  [ Gary Lasker ]
  * softwarecenter/enums.py,
    softwarecenter/utils.py,
    softwarecenter/backend/channel.py,
    softwarecenter/models/viewswitcherlist.py,
    softwarecenter/view/pendingview.py:
    - another icon crash fix (LP: #719662)
  * softwarecenter/backend/aptd.py,
    softwarecenter/models/appstore.py,
    softwarecenter/view/appdetailsview_webkit.py,
    softwarecenter/view/appview.py,
    softwarecenter/enums.py:
    - include additional details about the transaction when
      firing a transaction-started signal, wire to handlers
  * softwarecenter/view/widgets/actionbar.py:
    - tweak spacings for action bar
  * softwarecenter/db/application.py,
    softwarecenter/view/appdetailsview_gtk.py,
    softwarecenter/view/availablepane.py,
    softwarecenter/view/channelpane.py,
    softwarecenter/view/installedpane.py,
    softwarecenter/view/softwarepane.py,
    softwarecenter/enums.py:
    - implement the software-center side of unity launcher
      integration per the specification (LP: #670403)
    - temporarily hide the launcher integration feature pending
      implementation on the Unity side
  * test/test_downloader.py:
    - update unit test for SimpleFileDownloader changes

  [ Aaron Peachey ]
  * utils/submit_review.py,
    softwarecenter/db/reviews.py,
    softwarecenter/view/appdetailsview_gtk.py:
    - provide user feedback when submitting review usefulness