@@ -3,6 +3,7 @@ software-center (3.1.20) UNRELEASED; urgency=low
   [ Kiwinote ]
   * softwarecenter/view/appdetailsview_gtk.py:
     - make description accessible
+    - correctly update screenshot a11y text and make it less verbose
   * softwarecenter/view/catview_gtk.py:
     - rewrite recommended widget to make it suitable for i18n and a11y
   * softwarecenter/view/widgets/carousel.py:
